Fix footer spacing for phone view

--- a/css/home.css
+++ b/css/home.css
@@ -143,7 +143,7 @@
 
 .logo{
     padding: 2vh;
-    height: 50%;
+    height: 40%;
 }
 
 @media only screen and (max-width:1000px) {
